[CW10]
* SyncProxyAndroid SDK: Handle incoming messages with very big JSON size.
* Fix SPT.SetGlobalProperties: if uncheck all checkboxes of KeyboardProperties structure behaviour
* Log messages of the PutFile request when resume application

[CW9]
+ SYncProxyAndroid SDK: update heartbeat logic
+ 'HashId' management dialog
+ App resumption: save RPC requests (re-send them), save and re-use hashId
+ Add possibility to send Policy Table Update manually from Dialog
* Fix request / response notification messages
- Remove AlertManeuver UI.

[CW8]
+ SyncProxyAndroid SDK: heartbeat service type 0 added
+ SyncProxyAndroid SDK: heartbeat is back
* SyncProxyAndroid SDK: App resumption (USB) - SPT doesn't appear at HMI's App List
+ Process Start non RPC Service Nack
+ SyncProxyAndroid SDK: Add PredefinedLayout enum.
+ Add DiagnosticMessage request UI.
+ SyncProxyAndroid SDK: Add DiagnosticMessage request and response classes.
* Improve application exit: close non RPC services first, then close RPC, then - exit.

[CW7]
+ SyncProxyAndroid SDK: add AudioPassThruCapabilities struct. Add parameters to RegisterAppInterfaceResponse class.
+ SyncProxyAndroid SDK: add new parameters to SetDisplayLayoutResponse class.
+ Policy Table: read Snapshot file, response with Update file
+ Add secondaryGraphic parameter to Show UI.
+ SyncProxyAndroid SDK: Add secondaryGraphic parameter to Show request.
- Remove encrypted parameter from ReadDID UI.
* SyncProxyAndroid SDK: Add DIDResult struct. Update ReadDID and ReadDIDResponse.
+ Add endTime parameter to SetMediaClockTimer UI.
+ SyncProxyAndroid SDK: Add endTime parameter to SetMediaClockTimer request.
* SyncProxyAndroid SDK: Update VehicleDataType enum. Add new parameters to OnVehicleData notification. Sync *VehicleData* messages' parameters with the specification.
- SyncProxyAndroid SDK: removed heartbeat feature
* SyncProxyAndroid SDK: Update FileType enum.