@@ -1,4 +1,5 @@
 [CW10]
++ Add systemFile, offset, and length parameters to PutFile UI.
 * SyncProxyAndroid SDK: Handle incoming messages with very big JSON size.
 * Fix SPT.SetGlobalProperties: if uncheck all checkboxes of KeyboardProperties structure behaviour
 * Log messages of the PutFile request when resume application
